work on cassandra

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ streamProcessor/target/
 streamProcessor/target/streams/*
 streamProcessor/project/target/
 streamProcessor/src/main/resources
+.vscode
+.metals
