--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,6 +127,18 @@ services:
     networks:
       - faker
 
+  grafana:
+    build: 
+      context: ./grafana
+      dockerfile: Dockerfile
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - cassandra
+    networks:
+      - faker
+
 networks:
   faker:
     driver: bridge
